force-app/main/default/objects/Asset_Audit_Setting__mdt/Asset_Audit_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Asset Audit Setting</label>
    <pluralLabel>Asset Audit Settings</pluralLabel>
</CustomObject>