force-app/main/default/objects/Asset_Audit_Setting__mdt/fields/Default_ERP_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Default_ERP_Recipient__c</fullName>
    <description>Fallback email recipient used when the audited Account has no ERP Anomaly Email.</description>
    <label>Default ERP Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>