force-app/main/default/objects/Asset_Audit_Setting__mdt/fields/Maximum_Accuracy_Meters__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Accuracy_Meters__c</fullName>
    <description>Worst device-reported accuracy accepted for a mobile location audit.</description>
    <label>Maximum Accuracy Meters</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>