force-app/main/default/objects/Asset_Audit_Setting__mdt/fields/Maximum_Distance_Meters__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Distance_Meters__c</fullName>
    <description>Maximum base distance between the device and stored Location coordinates before a location-radius anomaly is created.</description>
    <label>Maximum Distance Meters</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>