force-app/main/default/objects/Asset_Audit_Setting__mdt/fields/Maximum_Fix_Age_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Fix_Age_Seconds__c</fullName>
    <description>Maximum age of a device location reading accepted when an audit is finalized.</description>
    <label>Maximum Fix Age Seconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>